finish checking process and generate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "utility": "c",
         "nullval.h": "c",
         "ranging_buffer.h": "c",
-        "modified_ranging.h": "c"
+        "modified_ranging.h": "c",
+        "stdint.h": "c"
     }
 }
