--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,27 @@
         "time_backup.h": "c",
         "unistd.h": "c",
         "stdlib.h": "c",
-        "dwtypes.h": "c"
+        "dwtypes.h": "c",
+        "concepts": "c",
+        "deque": "c",
+        "string": "c",
+        "unordered_map": "c",
+        "vector": "c",
+        "memory": "c",
+        "ostream": "c",
+        "streambuf": "c",
+        "functional": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "pthread.h": "c",
+        "localhost.h": "c",
+        "string.h": "c",
+        "debug.h": "c",
+        "local_host.h": "c",
+        "lock.h": "c",
+        "ranging_table.h": "c",
+        "stdarg.h": "c",
+        "stdio.h": "c",
+        "imitate_uwb.h": "c"
     }
 }
