add makefile, fix part problem of make

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
         "stdio.h": "c",
         "imitate_uwb.h": "c",
         "socket.h": "c",
-        "in.h": "c"
+        "in.h": "c",
+        "socket_frame.h": "c"
     }
 }
