--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
         "stop_token": "c",
         "thread": "c",
         "inet.h": "c",
-        "system_error": "c"
+        "system_error": "c",
+        "buffer": "c"
     }
 }
