--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "files.associations": {
         "base_struct.h": "c",
         "stdbool.h": "c",
-        "table_linked_list.h": "c",
+        "ranging_list.h": "c",
         "array": "c",
         "string_view": "c",
         "initializer_list": "c",
